--- a/frontend/src/main.css
+++ b/frontend/src/main.css
@@ -4,3 +4,20 @@ html, body, #root {
     width: 100%;
     height: 100%;
 }
+
+::-webkit-scrollbar {
+    width: 6px;
+}
+
+::-webkit-scrollbar-track {
+    background: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #888;
+    border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
+}
